--- a/downloads/index.html
+++ b/downloads/index.html
@@ -43,7 +43,7 @@
             </button>
         </a>
         <br/>
-        <a download href="https://kin1009.github.io/files/VSCode-win32-x64-1.90.0-insider.zip">
+        <a href="https://code.visualstudio.com/docs/?dv=winzip&build=insiders">
             <button>
                 <bold>VS Code</bold>
             </button>
