--- a/downloads/index.html
+++ b/downloads/index.html
@@ -19,7 +19,7 @@
             </button>
         </a>
         <br/>
-        <a download href="https://drive.google.com/file/d/1vEFNn8CnaruR9xXMSqO33UFRCVD_J87c/view?usp=drive_link">
+        <a href="https://drive.google.com/file/d/1vEFNn8CnaruR9xXMSqO33UFRCVD_J87c/view?usp=drive_link">
             <button>
                 <bold>Windows 11 (the Tiny11 ver)</bold>
             </button>
