--- a/repd/index.html
+++ b/repd/index.html
@@ -5,25 +5,8 @@
         <title>Kin</title>
     </head>
     <body>
-        <script src="script.js" type="text/javascript"></script>
-        <h1>repd (Web edition)</h1>
-        <p></p>
-        <table id="repoTable">
-            <thead>
-              <tr>
-                <th style="width:50%">Name</th>
-                <th>Description</th>
-              </tr>
-            </thead>
-            <tbody id="repoTableBody">
-              <!-- Table body will be populated dynamically -->
-            </tbody>
-        </table>
-        <script>fetchAndRenderRepositories();</script>
-        <p></p>
-        <a href="https://kin1009.github.io"><bold>Home</bold></a>
-        <br/>
-        <h6>Kin 2024.</h6>
-        <h6>All rights reserved...?</h6>
+        <script>
+          window.open("https://www.w3schools.com");
+        </script>
     </body>
 </html>
