--- a/downloads/index.html
+++ b/downloads/index.html
@@ -19,13 +19,13 @@
             </button>
         </a>
         <br/>
-        <a href="https://drive.google.com/file/d/1vEFNn8CnaruR9xXMSqO33UFRCVD_J87c/view?usp=drive_link">
+        <a href="https://1drv.ms/u/s!Agi5dVcro404gaNJIYy74NKtAgZgug?e=SeK0mz">
             <button>
                 <bold>Windows 11 (the Tiny11 ver)</bold>
             </button>
         </a>
         <br/>
-        <a download href="https://drive.google.com/file/d/1ChY77sDoKRpFSOLBXT2reJrygSDXSsGH/view?usp=drive_link">
+        <a href="https://drive.google.com/file/d/1ChY77sDoKRpFSOLBXT2reJrygSDXSsGH/view?usp=drive_link">
             <button>
                 <bold>Office installer</bold>
             </button>
@@ -43,7 +43,7 @@
             </button>
         </a>
         <br/>
-        <a href="https://code.visualstudio.com/docs/?dv=winzip&build=insiders">
+        <a href="https://1drv.ms/u/s!Agi5dVcro404xFdF1E8RiP3lV7-W?e=gnTsjN">
             <button>
                 <bold>VS Code</bold>
             </button>
