--- a/index.html
+++ b/index.html
@@ -58,6 +58,11 @@
                 <bold>Direct downloads</bold>
             </button>
         </a>
+        <a href="https://kin1009.github.io/other">
+            <button>
+                <bold>Other</bold>
+            </button>
+        </a>
         <p></p>
         <h6>Kin 2024.</h6>
         <h6>All rights reserved...?</h6>
