--- a/windows/index.html
+++ b/windows/index.html
@@ -1,45 +1,52 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" type="text/css" href="https://kin1009.github.io/style.css" />
-        <title>Windows stuff</title>
-    </head>
-    <body>
-        <script src="script.js" type="text/javascript"></script>
-        <p>
-            <h1>Windows stuff</h1>
-        </p>
-        <a download href="https://kin1009.github.io/files/Tiny11.iso">
-            <button>
-                <bold>Windows 11 (the Tiny11 ver)</bold>
-            </button>
-        </a>
-        <br/>
-        <a download href="https://kin1009.github.io/files/Office.iso">
-            <button>
-                <bold>Office installer</bold>
-            </button>
-        </a>
-        <br/>
-        <a download href="https://kin1009.github.io/files/UniKey.zip">
-            <button>
-                <bold>UniKey (Vietnamese)</bold>
-            </button>
-        </a>
-        <br/>
-        <a download href="https://kin1009.github.io/files/AIOTools.zip">
-            <button>
-                <bold>Windows / Office activator</bold>
-            </button>
-        </a>
-        <br/>
-        <a href="https://kin1009.github.io">
-            <button>
-                <bold>Home</bold>
-            </button>
-        </a>
-        <p></p>
-        <h6>Kin 2024.</h6>
-        <h6>All rights reserved...?</h6>
-    </body>
+
+<head>
+    <link rel="stylesheet" type="text/css" href="https://kin1009.github.io/style.css" />
+    <title>Windows stuff</title>
+</head>
+
+<body>
+    <script src="script.js" type="text/javascript"></script>
+    <p>
+    <h1>Windows stuff</h1>
+    </p>
+    <a href="https://1drv.ms/u/s!Agi5dVcro404gaNJIYy74NKtAgZgug?e=SeK0mz">
+        <button>
+            <bold>Windows 11 (the Tiny11 ver)</bold>
+        </button>
+    </a>
+    <br />
+    <a href=https://drive.google.com/file/d/1ChY77sDoKRpFSOLBXT2reJrygSDXSsGH/view?usp=drive_link">
+        <button>
+            <bold>Office installer</bold>
+        </button>
+    </a>
+    <br />
+    <a href="https://kin1009.github.io/files/UniKey.zip">
+        <button>
+            <bold>UniKey (Vietnamese)</bold>
+        </button>
+    </a>
+    <br />
+    <a href="https://kin1009.github.io/files/AIOTools.zip">
+        <button>
+            <bold>Windows / Office activator</bold>
+        </button>
+    </a>
+    <br />
+    <a href="https://kin1009.github.io">
+        <button>
+            <bold>Home</bold>
+        </button>
+    </a>
+    <br />
+    <a href="https://1drv.ms/u/s!Agi5dVcro404xFexcHbV4HP2L9S-">
+        <button><bold>Public files</bold></button>
+    </a>
+    <p></p>
+    <h6>Kin 2024.</h6>
+    <h6>All rights reserved...?</h6>
+</body>
+
 </html>
