--- a/index.html
+++ b/index.html
@@ -63,6 +63,11 @@
                 <bold>Other</bold>
             </button>
         </a>
+        <a href="https://kin1009.github.io/turnon">
+            <button>
+                <bold>Turn on (Game)</bold>
+            </button>
+        </a>
         <p></p>
         <h6>Kin 2024.</h6>
         <h6>All rights reserved...?</h6>
