--- a/turnon/index.html
+++ b/turnon/index.html
@@ -2,22 +2,22 @@
 <html>
 <head>
     <link rel="stylesheet" type="text/css" href="https://kin1009.github.io/style.css" />
-    <title>Turn Off</title>
+    <title>Turn On</title>
 </head>
 <body>
     <script src="script.js" type="text/javascript"></script>
     <p>
     <h1>Game</h1>
     </p>
+    <div id="game-container"></div>
+    <p id="timer">Time left: 120s</p>
+    <p id="score">Score: 1</p>
+    <button id="retry-button" onclick="startGame()" style="display:none;">Retry</button>
     <a href="https://kin1009.github.io">
         <button>
             <bold>Home</bold>
         </button>
     </a>
-    <div id="game-container"></div>
-    <p id="timer">Time left: 120s</p>
-    <p id="score">Score: 1</p>
-    <button id="retry-button" onclick="startGame()" style="display:none;">Retry</button>
     <h6>Kin 2024.</h6>
     <h6>All rights reserved...?</h6>
 </body>
