--- a/turnon/index.html
+++ b/turnon/index.html
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="https://kin1009.github.io/style.css" />
-    <title>Turn On</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <title>Turn Off</title>
 </head>
 <body>
     <script src="script.js" type="text/javascript"></script>
-    <p>
-    <h1>Game</h1>
-    </p>
-    <div id="game-container"></div>
-    <p id="timer">Time left: 120s</p>
-    <p id="score">Score: 1</p>
-    <button id="retry-button" onclick="startGame()" style="display:none;">Retry</button>
-    <a href="https://kin1009.github.io">
-        <button>
-            <bold>Home</bold>
-        </button>
-    </a>
+    <div id="rules">
+        <h1>Game</h1>
+        <p>Every level you must turn on all checkboxes in 120 seconds.</p>
+        <button id="start-button" onclick="startGame()">Start</button>
+    </div>
+    <div id="game" style="display:none;">
+        <div id="game-container"></div>
+        <p id="timer">Time left: 120s</p>
+        <p id="score">Score: 1</p>
+    </div>
+    <div id="controls">
+        <a id="home-button" href="https://kin1009.github.io">
+            <button>
+                <bold>Home</bold>
+            </button>
+        </a>
+        <button id="retry-button" onclick="startGame()" style="display:none;">Retry</button>
+    </div>
     <h6>Kin 2024.</h6>
     <h6>All rights reserved...?</h6>
 </body>
