--- a/turnon/index.html
+++ b/turnon/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <link rel="stylesheet" type="text/css" href="/style.css" />
-    <title>Turn Off</title>
+    <title>Turn On</title>
 </head>
 <body>
     <script src="script.js" type="text/javascript"></script>
