--- a/shorturl/index.html
+++ b/shorturl/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>URL Redirect Demo</title>
+    <title>URL Redirect</title>
 </head>
 <body>
     <h1>Redirecting...</h1>
-    <script src="redirect.js"></script> <!-- Link to your JS file -->
+    <script src="script.js"></script> <!-- Link to your JS file -->
 </body>
 </html>
