--- a/shorturl/index.html
+++ b/shorturl/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>URL Redirect</title>
+    <link rel="stylesheet" href="https://kin1009.github.io/style.css">
 </head>
 <body>
     <h1>Redirecting...</h1>
