--- a/ksharp/index.html
+++ b/ksharp/index.html
@@ -1,29 +1,20 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <link rel="stylesheet" type="text/css" href="https://kin1009.github.io/style.css" />
-        <title>Kin</title>
-    </head>
-    <body>
-        <script src="script.js" type="text/javascript"></script>
-        <h1>Projects</h1>
-        <p></p>
-        <table id="repoTable">
-            <thead>
-              <tr>
-                <th style="width:50%">Name</th>
-                <th>Description</th>
-              </tr>
-            </thead>
-            <tbody id="repoTableBody">
-              <!-- Table body will be populated dynamically -->
-            </tbody>
-        </table>
-        <script>fetchAndRenderRepositories();</script>
-        <p></p>
-        <a href="https://kin1009.github.io"><bold>Home</bold></a>
-        <br/>
-        <h6>Kin 2024.</h6>
-        <h6>All rights reserved...?</h6>
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Documentation Site</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="container">
+        <div class="sidebar">
+            <img src="path-to-image.jpg" alt="Documentation Image">
+        </div>
+        <div class="content">
+            <h1>Documentation Title</h1>
+            <p>This is where the content will go. You can include text, code examples, images, or anything else necessary for the documentation.</p>
+        </div>
+    </div>
+</body>
 </html>
