--- a/ksharp/index.html
+++ b/ksharp/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Documentation Site</title>
+    <title>K#</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
         <div class="sidebar">
-            <img src="path-to-image.jpg" alt="Documentation Image">
+            <img src="https://kin1009.github.io/files/k#.png" alt="Documentation Image">
         </div>
         <div class="content">
-            <h1>Documentation Title</h1>
+            <h1>K# Documentation & learning</h1>
             <p>This is where the content will go. You can include text, code examples, images, or anything else necessary for the documentation.</p>
         </div>
     </div>
