--- a/ksharp/index.html
+++ b/ksharp/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="sidebar">
-            <img src="Kin1009/kin1009.github.io/files/ksharp.png" alt="Documentation Image">
+            <img src="ksharp.png" alt="Documentation Image">
         </div>
         <div class="content">
             <h1>K# Documentation & learning</h1>
