--- a/ksharp/index.html
+++ b/ksharp/index.html
@@ -11,9 +11,8 @@
         <div class="sidebar">
             <img src="ksharp.png" alt="Documentation Image">
         </div>
-        <div class="content">
-            <h1>K# Documentation & learning</h1>
-            <p>This is where the content will go. You can include text, code examples, images, or anything else necessary for the documentation.</p>
+        <div class="content" markdown=1>
+            ## K# Documentation and learning
         </div>
     </div>
 </body>
