--- a/ksharp/index.html
+++ b/ksharp/index.html
@@ -11,9 +11,7 @@
         <div class="sidebar">
             <img src="ksharp.png" alt="Documentation Image">
         </div>
-        <div class="content" markdown=1>
-            ## K# Documentation and learning
-        </div>
+        <span style="display:block" class="content">It **works!**</span>
     </div>
 </body>
 </html>
