--- a/ksharp/index.html
+++ b/ksharp/index.html
@@ -11,7 +11,9 @@
         <div class="sidebar">
             <img src="ksharp.png" alt="Documentation Image">
         </div>
-        <span style="display:block" class="content">It **works!**</span>
+        <div class="content" markdown="1">
+            ## K# Documentation and learning
+        </div>
     </div>
 </body>
 </html>
