--- a/ksharp/index.html
+++ b/ksharp/index.html
@@ -11,8 +11,14 @@
         <div class="sidebar">
             <img src="ksharp.png" alt="Documentation Image">
         </div>
-        <div class="content" markdown="1">
-            ## K# Documentation and learning
+        <div class="content">
+            <h1>K# Documentation</h1>
+            <br/>
+            <h2>Variables</h2>
+            <h3>1. Making a variable</h3>
+            <h4>Syntax:</h4>
+            <pre><code>var var_name = ...;</code></pre>
+            
         </div>
     </div>
 </body>
