--- a/ksharp/index.html
+++ b/ksharp/index.html
@@ -17,8 +17,8 @@
             <h2>Variables</h2>
             <h3>1. Making a variable</h3>
             <h4>Syntax:</h4>
-            <pre><code>var var_name = ...;</code></pre>
-            
+            <code>var var_name = ...;</code>
+
         </div>
     </div>
 </body>
