--- a/ksharp/index.html
+++ b/ksharp/index.html
@@ -17,7 +17,7 @@
             <h2>Variables</h2>
             <h3>1. Making a variable</h3>
             <h4>Syntax:</h4>
-            <pre style="word-wrap: break-word; white-space: pre-wrap; font: consolas;"><code>var var_name = ...;</code></pre>
+            <p class="code">var var_name = ...;</p>
         </div>
     </div>
 </body>
