--- a/ksharp/index.html
+++ b/ksharp/index.html
@@ -10,6 +10,8 @@
     <div class="container">
         <div class="sidebar">
             <img src="ksharp.png" alt="Documentation Image">
+            <a href="https://github.com/Kin1009/KSharp">Download K#</a>
+            <p></p>
             <ul>
                 <li><a href="#variables">Variables</a></li>
                 <li><a href="#functions">Functions</a></li>
