--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
             </button>
         </a>
         <br/>
+        <a href="https://kin1009.github.io/ksharp">
+            <button>
+                <bold>K# Documentation and download</bold>
+            </button>
+        </a>
+        <br/>
         <a href="https://kin1009.github.io/songs">
             <button>
                 <bold>My songs</bold>
