--- a/ksharp/index.html
+++ b/ksharp/index.html
@@ -58,7 +58,7 @@ print(a); #2
             <h3>3. Type functions</h3>
             <h4>This has all builtin type functions for functions that return None (in-place)</h4>
             <h4>Syntax:</h4>
-            <p>
+            <p><pre style="font-family: Consolas; border-radius: 10px; background-color: #2a2a2a;">
 varname append item; #varname.append(item) in py
 varname extend iterable; #varname.extend(iterable)
 varname remove item; #varname.remove(item)
@@ -70,7 +70,7 @@ varname add item; #varname.add(item)
 varname update item; #varname.update(item)
 varname discard item; #varname.discard(item)
 varname intersection_update iterable; #varname.intersection_update(iterable)
-            </p>
+            </pre></p>
             <h4>Examples:</h4>
             <p><pre style="font-family: Consolas; border-radius: 10px; background-color: #2a2a2a;">var a = [];
 var b = input("Enter a value: "); #input 1
