--- a/ksharp/index.html
+++ b/ksharp/index.html
@@ -22,7 +22,7 @@
                 <li><a href="#execp">execp</a></li>
                 <li><a href="#modules-available">Modules Available</a></li>
             </ul>
-            <h4 style="position: absolute; bottom: 0; word-wrap: normal; font-weight: lighter">Copyright by Kin. </h4>
+            <h4 style="position: absolute; bottom: 0; word-wrap: break-word; font-weight: lighter">Copyright by Kin. </h4>
         </div>
         <div class="content">
             <h1 id="variables">K# Documentation</h1>
