--- a/ksharp/index.html
+++ b/ksharp/index.html
@@ -200,7 +200,7 @@ a += 1;
                 <li>qtgui</li>
             </ul>
             <h2 id="copyright">Copyright ©</h2>
-            <h4><pre style="word-wrap: normal; font-weight: lighter;">Copyright Notice
+            <h4><pre style="word-wrap: break-word; font-weight: lighter;">Copyright Notice
 You are free to copy, modify, and distribute this work under the following conditions:
 You must give appropriate credit to the original creator.
 You may not misrepresent the origin of this work, including falsely claiming it as your own or as belonging to your website or entity.
