--- a/ksharp/index.html
+++ b/ksharp/index.html
@@ -228,6 +228,7 @@ a += 1;
             <h3>Syntax:</h3>
             <p><pre>python("pythoncode")</pre></p>
             <h2 id="modules-available">Modules Available</h2>
+            <h3>NOTE: Since new Python 3.13 released, PySide6 didn't support Python 3.13. So, PySide6 and it's libraries will not be included until notice.</h3>
             <ul>
                 <li>sys</li>
                 <li>math</li>
