--- a/ksharp/index.html
+++ b/ksharp/index.html
@@ -10,8 +10,9 @@
     <div class="container">
         <div class="sidebar">
             <img src="ksharp.png" alt="Documentation Image">
-            <a href="https://drive.google.com/drive/folders/1ygNvL3y44Y0gZpFXp1G6X8_xtMitlw91">Download!</a>
+            <a href="https://github.com/Kin1009/KSharp">Download! (>= 1.4.6) </a>
             <a href="https://github.com/Kin1009/KSharp">Changelog</a>
+            <a href="https://drive.google.com/drive/folders/1ygNvL3y44Y0gZpFXp1G6X8_xtMitlw91">Download! (1.3.2 -> 1.4.5)</a>
             <p></p>
             <ul>
                 <li><a href="#variables">Variables</a></li>
